fdo#47447 parse rgb(%,%,%) correctly

Change-Id: I I I6df249fa1be37c7136baac03adcfb19fcf73e472